--- a/app/src/main/resources/ScheduleGnome/loginScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/loginScene.fxml
@@ -1,28 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
 
-<GridPane fx:controller="ScheduleGnome.FXMLController" xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+
+<GridPane alignment="CENTER" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.loginFXMLController">
    <padding>
-      <Insets top="25" right="25" bottom="10" left="25" />
+      <Insets bottom="10" left="25" right="25" top="25" />
    </padding>
-   <Text text="Welcome" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="2" />
+   <Text text="Welcome to ScheduleGnome!" GridPane.columnSpan="2" />
 
-   <Label text="User Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+         <Label focusTraversable="false" text="Username:" GridPane.rowIndex="1" />
 
-   <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-   <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+         <Label focusTraversable="false" text="Password:" GridPane.rowIndex="2" />
 
-   <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-   <HBox spacing="10" alignment="bottom_right" GridPane.columnIndex="1" GridPane.rowIndex="4">
-      <Button text="Sign In" onAction="#loginButton" />
+         <HBox alignment="CENTER" spacing="44.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+      <Button alignment="TOP_LEFT" defaultButton="true" onAction="#loginButton" text="Login" />
+      <Button layoutX="107.0" layoutY="10.0" onAction="#registerButton" text="Register" />
    </HBox>
 
-   <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+         <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+   <columnConstraints>
+      <ColumnConstraints />
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints vgrow="ALWAYS" />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+      <RowConstraints />
+   </rowConstraints>
 </GridPane>
