--- a/app/src/main/resources/ScheduleGnome/loginScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/loginScene.fxml
@@ -9,40 +9,44 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Text?>
 
-
-<GridPane alignment="CENTER" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.loginFXMLController">
-   <padding>
-      <Insets bottom="10" left="25" right="25" top="25" />
-   </padding>
-   <Text text="Welcome to ScheduleGnome!" GridPane.columnSpan="2" />
-
-         <Label focusTraversable="false" text="Username:" GridPane.rowIndex="1" />
-
-         <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-
-         <Label focusTraversable="false" text="Password:" GridPane.rowIndex="2" />
-
-         <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
-         <HBox alignment="CENTER" spacing="44.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-      <Button alignment="TOP_LEFT" defaultButton="true" onAction="#loginButton" text="Login" />
-      <Button layoutX="107.0" layoutY="10.0" onAction="#registerButton" text="Register" />
-   </HBox>
-
-         <Text fx:id="actiontarget" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints vgrow="ALWAYS" />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
-</GridPane>
+<StackPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.loginFXMLController">
+   <children>
+      <GridPane alignment="CENTER" hgap="10" vgap="10" StackPane.alignment="CENTER">
+         <padding>
+            <Insets bottom="10" left="25" right="25" top="25" />
+         </padding>
+         <Text text="Welcome to ScheduleGnome!" GridPane.columnSpan="2" />
+      
+               <Label focusTraversable="false" text="Username:" GridPane.rowIndex="1" />
+      
+               <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      
+               <Label focusTraversable="false" text="Password:" GridPane.rowIndex="2" />
+      
+               <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      
+               <HBox alignment="CENTER" spacing="44.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <Button alignment="TOP_LEFT" defaultButton="true" onAction="#loginButton" text="Login" />
+            <Button layoutX="107.0" layoutY="10.0" onAction="#registerButton" text="Register" />
+         </HBox>
+      
+               <Text fx:id="actiontarget" textAlignment="RIGHT" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+         <columnConstraints>
+            <ColumnConstraints hgrow="NEVER" />
+            <ColumnConstraints hgrow="NEVER" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints vgrow="NEVER" />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+            <RowConstraints />
+         </rowConstraints>
+      </GridPane>
+   </children>
+</StackPane>
