--- a/app/src/main/resources/ScheduleGnome/savedScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/savedScene.fxml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
    <children>
-      <Rectangle arcWidth="5.0" fill="#9a1a29" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
-      <Text fill="WHITE" layoutX="14.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GCC Scheduling" wrappingWidth="367.55731201171875">
+      <Rectangle arcWidth="5.0" fill="#9a1a29" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="800.0" />
+      <Text fill="WHITE" layoutX="18.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="GCC Scheduling" wrappingWidth="367.55731201171875">
          <font>
             <Font name="Arial Nova Light" size="47.0" />
          </font>
       </Text>
+      <Button alignment="CENTER" layoutX="654.0" layoutY="34.0" mnemonicParsing="false" onAction="#logout" prefHeight="52.0" prefWidth="113.0" text="Logout">
+         <font>
+            <Font name="MT Extra" size="21.0" />
+         </font>
+      </Button>
+      <Text fill="WHITE" layoutX="529.0" layoutY="47.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome back," />
+      <Button layoutX="656.0" layoutY="142.0" mnemonicParsing="false" onAction="#newSchedule" prefHeight="31.0" prefWidth="113.0" text="New">
+         <font>
+            <Font name="Arial Nova Light" size="22.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
