--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
@@ -19,17 +20,17 @@
         <content>
             <GridPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="786.0">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="117.99999999999999" minWidth="10.0" prefWidth="117.99999999999999" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.99998779296874" minWidth="10.0" prefWidth="197.60000000000002" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60001220703123" minWidth="10.0" prefWidth="164.60001220703123" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="111.20001220703125" minWidth="10.0" prefWidth="67.79998779296875" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.20001831054688" minWidth="10.0" prefWidth="139.20001831054688" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.99998779296874" minWidth="10.0" prefWidth="174.5999755859375" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60001220703123" minWidth="10.0" prefWidth="111.20002441406251" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.4000122070313" minWidth="10.0" prefWidth="104.79997558593749" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.79998779296875" minWidth="10.0" prefWidth="128.800048828125" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="10.0" prefWidth="113.199951171875" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints maxHeight="105.39998168945313" minHeight="9.800013160705568" prefHeight="48.40000610351562" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="155.39998683929443" minHeight="0.0" prefHeight="120.99999389648436" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="135.20002212524415" minHeight="10.0" prefHeight="119.20002212524415" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="155.39998683929443" minHeight="0.0" prefHeight="42.400018310546855" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="199.19998168945312" minHeight="10.0" prefHeight="199.19998168945312" vgrow="ALWAYS" />
                </rowConstraints>
                <padding>
                   <Insets left="15.0" />
@@ -40,24 +41,34 @@
                         <Insets left="50.0" right="50.0" />
                      </GridPane.margin>
                   </TextField>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Department" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Department" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
                   </Text>
-                  <Text layoutX="105.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit Hours" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <Text layoutX="105.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit Hours" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
                   </Text>
-                  <Text layoutX="360.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Starts After" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <Text layoutX="360.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Starts After" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="10.0" />
+                     </GridPane.margin>
                   </Text>
-                  <ChoiceBox fx:id="departmentChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <ChoiceBox fx:id="creditChoice" prefWidth="150.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <ChoiceBox fx:id="startTimeChoice" prefWidth="150.0" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <ChoiceBox fx:id="departmentChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <ChoiceBox fx:id="creditChoice" prefWidth="150.0" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <ChoiceBox fx:id="startTimeChoice" prefWidth="150.0" GridPane.columnIndex="5" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <ListView fx:id="searchList" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS" />
                </children>
             </GridPane>
         </content>
