--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -6,16 +6,16 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.23895582329317272" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
+<SplitPane dividerPositions="0.23238180196253347" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
+      <HBox prefHeight="100.0" prefWidth="200.0" />
       <ScrollPane prefHeight="200.0" prefWidth="200.0">
         <content>
             <GridPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="786.0">
