--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -13,10 +13,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.23238180196253347" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
+<SplitPane dividerPositions="0.5551415797317436" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
   <items>
-      <HBox prefHeight="100.0" prefWidth="200.0" />
-      <ScrollPane prefHeight="200.0" prefWidth="200.0">
+      <HBox prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <ListView fx:id="eventList" prefHeight="245.0" prefWidth="799.0" />
+         </children></HBox>
+      <ScrollPane prefHeight="301.0" prefWidth="797.0">
         <content>
             <GridPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="786.0">
                <columnConstraints>
