--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
@@ -10,9 +10,6 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-
 
 <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
    <columnConstraints>
@@ -32,8 +29,8 @@
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.20001831054688" minWidth="10.0" prefWidth="139.20001831054688" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.99998779296874" minWidth="10.0" prefWidth="174.5999755859375" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60001220703123" minWidth="10.0" prefWidth="111.20002441406251" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.4000122070313" minWidth="10.0" prefWidth="104.79997558593749" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60001220703123" minWidth="10.0" prefWidth="96.79998779296875" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.20002441406245" minWidth="10.0" prefWidth="120.0000122070312" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.79998779296875" minWidth="10.0" prefWidth="128.800048828125" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="10.0" prefWidth="113.199951171875" />
                      </columnConstraints>
@@ -51,34 +48,10 @@
                               <Insets left="50.0" right="50.0" />
                            </GridPane.margin>
                         </TextField>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Department" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </Text>
-                        <Text layoutX="105.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Credit Hours" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </Text>
-                        <Text layoutX="360.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Starts After" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                           <GridPane.margin>
-                              <Insets right="10.0" />
-                           </GridPane.margin>
-                        </Text>
-                        <ChoiceBox fx:id="departmentChoice" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                        <ChoiceBox fx:id="creditChoice" prefWidth="150.0" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                        <ChoiceBox fx:id="startTimeChoice" prefWidth="150.0" GridPane.columnIndex="5" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                         <ListView fx:id="searchList" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS" />
+                        <ComboBox fx:id="departmentChoice" onAction="#search" prefWidth="150.0" promptText="Department" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        <ComboBox fx:id="creditChoice" onAction="#search" prefWidth="150.0" promptText="Credit Hours" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        <ComboBox fx:id="startTimeChoice" onAction="#search" prefWidth="150.0" promptText="Starts After" GridPane.columnIndex="5" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                      </children>
                   </GridPane>
               </content>
