--- a/app/src/main/resources/ScheduleGnome/savedScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/savedScene.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -28,5 +30,11 @@
             <Font name="Arial Nova Light" size="22.0" />
          </font>
       </Button>
+      <ListView fx:id="listView" layoutX="116.0" layoutY="182.0" prefHeight="232.0" prefWidth="229.0" />
+      <Label layoutX="162.0" layoutY="161.0" prefHeight="23.0" prefWidth="138.0" text="Saved Schedules" textAlignment="CENTER">
+         <font>
+            <Font name="Arial Nova Light" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
