--- a/app/src/main/resources/ScheduleGnome/savedScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/savedScene.fxml
@@ -41,5 +41,6 @@
             <Font name="MT Extra" size="21.0" />
          </font>
       </Button>
+      <Button layoutX="494.0" layoutY="148.0" mnemonicParsing="false" onAction="#compareSchedules" prefHeight="36.0" prefWidth="125.0" text="Compare Schedules " />
    </children>
 </AnchorPane>
