Made it look better

--- a/app/src/main/resources/ScheduleGnome/styles.css
+++ b/app/src/main/resources/ScheduleGnome/styles.css
@@ -5,29 +5,28 @@
  */
 
 #loginButton {
-    /*-fx-background-color: #c1dbc8; !* Green *!*/
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
-    -fx-background-color: #5c8065;
+    -fx-background-color: #D3D3D3;
+    -fx-font-weight: bold;
     -fx-border: none;
+    -fx-text-fill: #545454;
     -fx-padding: 15px 32px;
     -fx-text-align: center;
     -fx-text-decoration: none;
     -fx-display: inline-block;
     -fx-font-size: 16px;
-    -fx-text-fill: white;
-    -fx-font-weight: bold;
 }
 
 #loginButton:hover {
-    -fx-background-color: #48634f;
+    -fx-background-color: #a9a9a9;
 }
 
 #registerButton {
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
-    -fx-background-color: #5c8065; /* Green */
+    -fx-background-color: #D3D3D3;
     -fx-font-weight: bold;
     -fx-border: none;
-    -fx-text-fill: white;
+    -fx-text-fill: #545454;
     -fx-padding: 15px 32px;
     -fx-text-align: center;
     -fx-text-decoration: none;
@@ -36,7 +35,7 @@
 }
 
 #registerButton:hover {
-    -fx-background-color: #48634f;
+    -fx-background-color: #a9a9a9;
 }
 
 #body {
@@ -46,10 +45,11 @@
 }
 
 #rectangle {
-    -fx-background-color: #D1E3CF;
-    -fx-padding: 30px;
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
+    -fx-background-color: #48634f;
+    -fx-padding: 20 30 10 30;
     -fx-border-color: #5c8065;
-    -fx-border-width: 4px;
+    -fx-border-width: 5px;
 }
 
 #welcomeTitle {
@@ -58,7 +58,7 @@
     -fx-font-family: "Bookman Old Style";
     -fx-alignment: right;
     -fx-font-size: 55px;
-    -fx-fill: #48634f;
+    -fx-fill: white;
     -fx-font-weight: 900;
 }
 
@@ -82,13 +82,13 @@
 #usernameLabel {
     -fx-font-size: 15px;
     -fx-font-weight: bold;
-    -fx-text-fill: #48634f;
+    -fx-text-fill: white;
 }
 
 #passwordLabel {
     -fx-font-size: 15px;
     -fx-font-weight: bold;
-    -fx-text-fill: #48634f;
+    -fx-text-fill: white;
 }
 
 /*
@@ -105,4 +105,50 @@
     -fx-font-family: "Bookman Old Style";
     -fx-font-weight: bold;
     -fx-font-size: 45px;
+}
+
+#savedBackground {
+    -fx-background-color: #dfebe2;
+}
+
+#schedulesLabel {
+    -fx-padding: 5px;
+    -fx-text-fill: #48634f;
+    -fx-font-weight: 400;
+    -fx-font-weight: bold;
+    -fx-font-size: 16pt;
+    -fx-text-alignment: left;
+}
+
+#logoutButton {
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
+    -fx-background-color: #D3D3D3;
+    -fx-font-weight: bold;
+    -fx-border: none;
+    -fx-text-fill: #545454;
+    -fx-padding: 15px 32px;
+    -fx-text-align: center;
+    -fx-text-decoration: none;
+    -fx-display: inline-block;
+    -fx-font-size: 16px;
+}
+
+#profileButton {
+    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 1 );
+    -fx-background-color: #D3D3D3;
+    -fx-font-weight: bold;
+    -fx-border: none;
+    -fx-text-fill: #545454;
+    -fx-padding: 15px 32px;
+    -fx-text-align: center;
+    -fx-text-decoration: none;
+    -fx-display: inline-block;
+    -fx-font-size: 16px;
+}
+
+#profileButton:hover {
+    -fx-background-color: #a9a9a9;
+}
+#logoutButton:hover {
+    -fx-background-color: #a9a9a9;
 }
