--- a/app/src/main/resources/ScheduleGnome/savedScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/savedScene.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
+<AnchorPane id="savedBackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
    <children>
       <Rectangle id="savedHeader" arcWidth="5.0" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="800.0" />
       <Text id="headerText" fill="WHITE" layoutX="18.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grove City College" wrappingWidth="500">
       </Text>
-      <Button layoutX="656.0" layoutY="142.0" mnemonicParsing="false" onAction="#clickNew" prefHeight="31.0" prefWidth="113.0" text="New">
+      <Button id="newButton" layoutX="656.0" layoutY="142.0" mnemonicParsing="false" onAction="#clickNew" prefHeight="31.0" prefWidth="113.0" text="New">
          <font>
             <Font name="Arial Nova Light" size="22.0" />
          </font>
       </Button>
-      <Button alignment="CENTER" layoutX="654.0" layoutY="34.0" mnemonicParsing="false" onAction="#logout" prefHeight="52.0" prefWidth="113.0" text="Logout">
+      <Button id="logoutButton" alignment="CENTER" layoutX="654.0" layoutY="34.0" mnemonicParsing="false" onAction="#logout" text="Logout">
          <font>
             <Font name="MT Extra" size="21.0" />
          </font>
@@ -28,16 +28,14 @@
             <Font size="14.0" />
          </font></Text>
       <ListView fx:id="listView" layoutX="116.0" layoutY="182.0" prefHeight="232.0" prefWidth="229.0" />
-      <Label layoutX="162.0" layoutY="161.0" prefHeight="23.0" prefWidth="138.0" text="Saved Schedules" textAlignment="CENTER">
-         <font>
-            <Font name="Arial Nova Light" size="18.0" />
-         </font>
+      <Label id="schedulesLabel" layoutX="125.0" layoutY="145.0" prefHeight="23.0" prefWidth="400.0" text="SAVED SCHEDULES">
+
       </Label>
-      <Button alignment="CENTER" layoutX="518.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickProfile" prefHeight="52.0" prefWidth="113.0" text="Profile">
+      <Button id="profileButton" alignment="CENTER" layoutX="518.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickProfile" text="Profile">
          <font>
             <Font name="MT Extra" size="21.0" />
          </font>
       </Button>
-      <Button layoutX="494.0" layoutY="148.0" mnemonicParsing="false" onAction="#compareSchedules" prefHeight="36.0" prefWidth="125.0" text="Compare Schedules " />
+      <Button id="compareButton" layoutX="494.0" layoutY="148.0" mnemonicParsing="false" onAction="#compareSchedules" prefHeight="36.0" prefWidth="125.0" text="Compare Schedules " />
    </children>
 </AnchorPane>
