--- a/app/src/main/resources/ScheduleGnome/loginScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/loginScene.fxml
@@ -34,7 +34,7 @@
             <Button id="registerButton" layoutX="107.0" layoutY="10.0" onAction="#registerButton" text="Register" />
          </HBox>
       
-               <Text fx:id="actiontarget" textAlignment="RIGHT" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
+               <Text fx:id="actiontarget" textAlignment="LEFT" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
          <columnConstraints>
             <ColumnConstraints hgrow="NEVER" />
             <ColumnConstraints hgrow="NEVER" />
