--- a/app/src/main/resources/ScheduleGnome/nameSchedule.fxml
+++ b/app/src/main/resources/ScheduleGnome/nameSchedule.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane style="-fx-background-color: #e3ebe1" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.nameScheduleController">
+<AnchorPane prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #e3ebe1" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.nameScheduleController">
 
    <children>
       <Rectangle id="nameHeader" arcWidth="5.0" fill="#48634f" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="800.0" />
@@ -22,8 +22,8 @@
       </Text>
       <Button id="nameCreateButton" defaultButton="true" layoutX="563.0" layoutY="238.0" mnemonicParsing="false" onAction="#create" text="Create" />
       <Button id="nameCancelButton" layoutX="663.0" layoutY="43.0" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
-      <RadioButton fx:id="springToggle" layoutX="330.0" layoutY="289.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="70.0" text="Spring" />
-      <RadioButton fx:id="fallToggle" layoutX="248.0" layoutY="289.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="56.0" selected="true" text="Fall" />
-      <Text fx:id="actiontarget" textAlignment="CENTER" />
+      <RadioButton fx:id="springToggle" layoutX="330.0" layoutY="318.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="70.0" text="Spring" />
+      <RadioButton fx:id="fallToggle" layoutX="248.0" layoutY="318.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="56.0" selected="true" text="Fall" />
+      <Text fx:id="actiontarget" fill="#656565" layoutX="251.0" layoutY="306.0" textAlignment="CENTER" />
    </children>
 </AnchorPane>
