--- a/app/src/main/resources/ScheduleGnome/addOwnEvent.fxml
+++ b/app/src/main/resources/ScheduleGnome/addOwnEvent.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -9,40 +10,43 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.addOwnEventController">
+<AnchorPane prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #e3ebe1" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.addOwnEventController">
    <children>
-      <Rectangle arcWidth="5.0" fill="#929496" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="800.0" />
-      <Text fill="#fdfdfd" layoutX="17.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Extracurricular" wrappingWidth="410.7965545654297">
-         <font>
-            <Font name="Arial Nova Light" size="36.0" />
-         </font>
+      <Rectangle id="extracurricularHeader" arcWidth="5.0" fill="#48634f" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="800.0" />
+      <Text id="excTitle" fill="white" layoutX="17.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Extracurricular" wrappingWidth="410.7965545654297">
       </Text>
       <TextField layoutX="222.0" layoutY="179.0" prefHeight="37.0" prefWidth="441.0" promptText="Enter extracurricular title..." />
       <ComboBox fx:id="startTimeChoice" layoutX="222.0" layoutY="252.0" prefWidth="150.0" promptText="Start Time" />
       <ComboBox fx:id="endTimeChoice" layoutX="513.0" layoutY="252.0" prefWidth="150.0" promptText="End TIme" />
-      <CheckBox layoutX="52.0" layoutY="216.0" mnemonicParsing="false" text="Monday">
+      <CheckBox layoutX="52.0" layoutY="216.0" mnemonicParsing="false" text="Monday" textFill="#595959">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font></CheckBox>
-      <CheckBox layoutX="52.0" layoutY="255.0" mnemonicParsing="false" text="Tuesday">
+      <CheckBox layoutX="52.0" layoutY="255.0" mnemonicParsing="false" text="Tuesday" textFill="#595959">
          <font>
-            <Font size="14.0" />
-         </font></CheckBox>
-      <CheckBox layoutX="52.0" layoutY="295.0" mnemonicParsing="false" text="Wednesday">
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></CheckBox>
+      <CheckBox layoutX="52.0" layoutY="295.0" mnemonicParsing="false" text="Wednesday" textFill="#595959">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font></CheckBox>
-      <CheckBox layoutX="52.0" layoutY="336.0" mnemonicParsing="false" text="Thursday">
+      <CheckBox layoutX="52.0" layoutY="336.0" mnemonicParsing="false" text="Thursday" textFill="#595959">
          <font>
-            <Font size="14.0" />
-         </font></CheckBox>
-      <CheckBox layoutX="52.0" layoutY="377.0" mnemonicParsing="false" text="Friday">
+            <Font name="System Bold" size="14.0" />
+         </font>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></CheckBox>
+      <CheckBox layoutX="52.0" layoutY="377.0" mnemonicParsing="false" text="Friday" textFill="#595959">
          <font>
-            <Font size="14.0" />
+            <Font name="System Bold" size="14.0" />
          </font></CheckBox>
-      <Button layoutX="716.0" layoutY="185.0" mnemonicParsing="false" onAction="#add" text="Add" />
-      <Button layoutX="715.0" layoutY="48.0" mnemonicParsing="false" onAction="#back" text="Back" />
-      <Text layoutX="47.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Days of event">
+      <Button id="excAdd" layoutX="716.0" layoutY="185.0" mnemonicParsing="false" onAction="#add" text="Add" />
+      <Button id="excCancel" layoutX="715.0" layoutY="48.0" mnemonicParsing="false" onAction="#back" text="Cancel" />
+      <Text id="excDays" layoutX="47.0" layoutY="192.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Days of event">
          <font>
             <Font size="18.0" />
          </font>
