Improved buttons search page

--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -93,7 +93,7 @@
                               <Insets right="10.0" />
                            </GridPane.margin></ComboBox>
                         <ComboBox fx:id="startTimeChoice" onAction="#search" prefWidth="150.0" promptText="Starts After" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                        <Button mnemonicParsing="false" onAction="#addOwn" prefHeight="25.0" prefWidth="89.0" text="+ Own Event" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        <Button mnemonicParsing="false" onAction="#addOwn" prefHeight="24.0" prefWidth="110.0" text="+ Extracurricular" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                      </children>
                   </GridPane>
                </children>
@@ -105,7 +105,7 @@
             <Insets right="10.0" top="10.0" />
          </GridPane.margin>
       </Button>
-      <Button fx:id="delete" minHeight="15.0" mnemonicParsing="false" onAction="#delete" prefHeight="15.0" prefWidth="51.0" text="Delete" textAlignment="CENTER" textFill="#378ca1">
+      <Button fx:id="delete" minHeight="15.0" mnemonicParsing="false" onAction="#delete" prefHeight="23.0" prefWidth="51.0" text="Delete" textAlignment="CENTER" textFill="#378ca1">
          <GridPane.margin>
             <Insets left="10.0" top="10.0" />
          </GridPane.margin>
