--- a/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
+++ b/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.CompareFXMLController">
    <children>
@@ -16,7 +17,7 @@
         <items>
           <AnchorPane minHeight="217.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane fx:id="calGrid1" gridLinesVisible="true" layoutX="-1.0" prefHeight="212.0" prefWidth="678.0">
+                  <GridPane fx:id="calGrid1" gridLinesVisible="true" layoutX="-1.0" opacity="0.75" prefHeight="212.0" prefWidth="678.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -49,18 +50,33 @@
                         <Label prefHeight="17.0" prefWidth="101.0" text="        Monday" textAlignment="CENTER" GridPane.columnIndex="1">
                            <tooltip>
                               <Tooltip text="HI" />
-                           </tooltip></Label>
-                        <Label prefHeight="17.0" prefWidth="109.0" text="       Tuesday" GridPane.columnIndex="2" />
-                        <Label prefHeight="17.0" prefWidth="108.0" text="     Wednesday" GridPane.columnIndex="3" />
-                        <Label prefHeight="17.0" prefWidth="101.0" text="       Thursday" GridPane.columnIndex="4" />
-                        <Label prefHeight="17.0" prefWidth="118.0" text="         Friday" GridPane.columnIndex="5" />
+                           </tooltip>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="17.0" prefWidth="109.0" text="       Tuesday" GridPane.columnIndex="2">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="17.0" prefWidth="108.0" text="     Wednesday" GridPane.columnIndex="3">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="17.0" prefWidth="101.0" text="       Thursday" GridPane.columnIndex="4">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <Label prefHeight="17.0" prefWidth="113.0" text="         Friday" GridPane.columnIndex="5">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
                      </children>
                   </GridPane>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="217.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane fx:id="calGrid2" gridLinesVisible="true" prefHeight="209.0" prefWidth="678.0">
+                  <GridPane fx:id="calGrid2" gridLinesVisible="true" opacity="0.75" prefHeight="209.0" prefWidth="678.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -88,7 +104,7 @@
             </AnchorPane>
         </items>
       </SplitPane>
-      <Button layoutX="726.0" layoutY="19.0" mnemonicParsing="false" onAction="#clickHome" text="Home" />
+      <Button id="compareHomeButton" layoutX="705.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickHome" text="Home" />
       <Button layoutX="205.0" layoutY="-30.0" mnemonicParsing="false" text="Button" />
       <ComboBox fx:id="schedule1" layoutX="705.0" layoutY="68.0" onAction="#updateFirstCal" prefHeight="25.0" prefWidth="85.0" />
       <ComboBox fx:id="schedule2" layoutX="709.0" layoutY="234.0" onAction="#updateSecondCal" prefHeight="25.0" prefWidth="77.0" />
